--- a/floralstack-backend/src/main/resources/application.properties
+++ b/floralstack-backend/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.datasource.hikari.idleTimeout=30000
 spring.datasource.hikari.poolName=SpringBootJPAHikariCP
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.schema=classpath:/schema.sql
+
+#spring:
+#  profiles:
+#    active: @spring.profiles.active@
+#
+#app:
+#  datasource:
+#    jdbc-url: jdbc:postgresql://fullstackspringbootdb.celswdmxhcr1.eu-west-1.rds.amazonaws.com:5432/amigoscodedemo
+#    username: amigoscode
+#    password: 123456789
+#    pool-size: 30
