Implements CRUD operations on users table

--- a/floralstack-backend/src/main/resources/application.yml
+++ b/floralstack-backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   datasource:
     jdbc-url: jdbc:oracle:thin:@localhost:1521/ORCLCDB.localdomain
-    username: admin
+    username: c##admin
     password: admin
     pool-size: 30
