--- a/floralstack-backend/src/main/resources/application.yml
+++ b/floralstack-backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   datasource:
-    jdbc-url: jdbc:oracle:thin:@localhost:1521/ORCLCDB.localdomain
-    username: c##admin
-    password: admin
+    jdbc-url: ${JDBC_URL:jdbc:oracle:thin:@localhost:1521/ORCLCDB.localdomain}
+    username: ${JDBC_USERNAME:c##admin}
+    password: ${JDBC_PASSWORD:admin}
     pool-size: 30
